Made Chromedriver close once data is downloaded and corrected path for movie stats file

--- a/src/graph4nlp/sentiment_analysis.ipynb
+++ b/src/graph4nlp/sentiment_analysis.ipynb
@@ -135,6 +135,7 @@
     "                else:\n",
     "                    f.write(line)\n",
     "\n",
+    "    # Scrape Rotten Tomatoes to create a custom dataset. Called automatically by Text2LabelDataset base class if raw data is not already available                \n",
     "    def download(self):\n",
     "        critic_url = \"https://www.rottentomatoes.com/m/day_after_tomorrow/reviews\"\n",
     "        critic_req = requests.get(critic_url)\n",
@@ -197,6 +198,7 @@
     "            if page < audience_num_pages - 1:\n",
     "                audience_soup = self._click_next_button(driver, \"//*[@id='content']/div/div/nav[3]/button[2]\")\n",
     "\n",
+    "        driver.quit() # Close the browser\n",
     "        audience_freshness = audience_pos / audience_total\n",
     "\n",
     "        self._write_dataset_to_file(self.raw_dir + \"/test.txt\", critic_data)\n",
@@ -205,7 +207,7 @@
     "        self._balance_file(self.raw_dir + \"/train.txt\", audience_pos, audience_total)\n",
     "\n",
     "        # Write a stats file containing the actual stats retrieved from the web scrape (to be compared against the model's guesses)\n",
-    "        with open(self.root + \"actual_stats.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        with open(self.root + \"/actual_stats.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "            f.write(\"## Critic Stats ##\\n\")\n",
     "            f.write(\"Total Critic Reviews: {}\\n\".format(critic_total))\n",
     "            f.write(\"Positive Critic Reviews: {}\\n\".format(critic_pos))\n",
@@ -547,21 +549,7 @@
       "[ Using CPU ]\n",
       "\n",
       "../../out/rotten_tomatoes/graphsage_bi_fuse_constituency_ckpt\n",
-      "Building vocabs...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".vector_cache/glove.840B.300d.zip: 2.18GB [30:39, 1.18MB/s]                                                            \n",
-      "100%|████████████████████████████████████████████████████████████████████▉| 2196016/2196017 [03:14<00:00, 11288.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Building vocabs...\n",
       "Pretrained word embeddings hit ratio: 0.9436234263820471\n",
       "Using pretrained word embeddings\n",
       "[ Initialized word embeddings: (3654, 300) ]\n",
@@ -569,54 +557,38 @@
       "Loading pre-built vocab model stored in ../../data\\processed\\constituency_graph\\vocab.pt\n",
       "Train size: 1771, Val size: 160, Test size: 160\n",
       "[ Fix word embeddings ]\n",
-      "Epoch: [1 / 500] | Time: 52.68s | Loss: 0.6468 | Train Acc: 60.11% | Val Acc: 53.75%\n",
+      "Epoch: [1 / 500] | Time: 51.67s | Loss: 0.6503 | Train Acc: 60.43% | Val Acc: 51.25%\n",
       "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_constituency_ckpt\\params.saved\n",
-      "Epoch: [2 / 500] | Time: 51.93s | Loss: 0.5775 | Train Acc: 70.23% | Val Acc: 52.50%\n",
-      "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [3 / 500] | Time: 50.83s | Loss: 0.5498 | Train Acc: 72.87% | Val Acc: 52.50%\n",
-      "EarlyStopping counter: 2 out of 10\n",
-      "Epoch     4: reducing learning rate of group 0 to 1.0000e-03.\n",
-      "Epoch: [4 / 500] | Time: 51.11s | Loss: 0.5368 | Train Acc: 74.30% | Val Acc: 50.62%\n",
-      "EarlyStopping counter: 3 out of 10\n",
-      "Epoch: [5 / 500] | Time: 51.14s | Loss: 0.5191 | Train Acc: 75.57% | Val Acc: 53.12%\n",
-      "EarlyStopping counter: 4 out of 10\n",
-      "Epoch: [6 / 500] | Time: 51.42s | Loss: 0.4996 | Train Acc: 75.13% | Val Acc: 50.62%\n",
-      "EarlyStopping counter: 5 out of 10\n",
-      "Epoch     7: reducing learning rate of group 0 to 5.0000e-04.\n",
-      "Epoch: [7 / 500] | Time: 51.94s | Loss: 0.4897 | Train Acc: 75.92% | Val Acc: 53.12%\n",
-      "EarlyStopping counter: 6 out of 10\n",
-      "Epoch: [8 / 500] | Time: 51.82s | Loss: 0.4726 | Train Acc: 77.04% | Val Acc: 52.50%\n",
-      "EarlyStopping counter: 7 out of 10\n",
-      "Epoch: [9 / 500] | Time: 51.30s | Loss: 0.4639 | Train Acc: 77.27% | Val Acc: 51.88%\n",
-      "EarlyStopping counter: 8 out of 10\n",
-      "Epoch: [10 / 500] | Time: 50.99s | Loss: 0.4499 | Train Acc: 79.36% | Val Acc: 56.25%\n",
+      "Epoch: [2 / 500] | Time: 49.68s | Loss: 0.6017 | Train Acc: 67.52% | Val Acc: 51.25%\n",
       "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_constituency_ckpt\\params.saved\n",
-      "Epoch: [11 / 500] | Time: 50.99s | Loss: 0.4435 | Train Acc: 78.98% | Val Acc: 53.12%\n",
+      "Epoch: [3 / 500] | Time: 49.48s | Loss: 0.5445 | Train Acc: 72.14% | Val Acc: 55.00%\n",
+      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_constituency_ckpt\\params.saved\n",
+      "Epoch: [4 / 500] | Time: 48.46s | Loss: 0.5417 | Train Acc: 72.49% | Val Acc: 51.25%\n",
       "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [12 / 500] | Time: 51.19s | Loss: 0.4251 | Train Acc: 79.88% | Val Acc: 51.88%\n",
+      "Epoch: [5 / 500] | Time: 49.01s | Loss: 0.5230 | Train Acc: 74.12% | Val Acc: 53.75%\n",
       "EarlyStopping counter: 2 out of 10\n",
-      "Epoch    13: reducing learning rate of group 0 to 2.5000e-04.\n",
-      "Epoch: [13 / 500] | Time: 51.17s | Loss: 0.4074 | Train Acc: 80.94% | Val Acc: 50.62%\n",
+      "Epoch     6: reducing learning rate of group 0 to 1.0000e-03.\n",
+      "Epoch: [6 / 500] | Time: 49.35s | Loss: 0.5241 | Train Acc: 74.04% | Val Acc: 51.25%\n",
       "EarlyStopping counter: 3 out of 10\n",
-      "Epoch: [14 / 500] | Time: 51.20s | Loss: 0.3908 | Train Acc: 81.95% | Val Acc: 50.62%\n",
+      "Epoch: [7 / 500] | Time: 49.19s | Loss: 0.4885 | Train Acc: 77.68% | Val Acc: 50.62%\n",
       "EarlyStopping counter: 4 out of 10\n",
-      "Epoch: [15 / 500] | Time: 51.04s | Loss: 0.3774 | Train Acc: 82.71% | Val Acc: 50.00%\n",
+      "Epoch: [8 / 500] | Time: 48.95s | Loss: 0.4584 | Train Acc: 78.27% | Val Acc: 53.75%\n",
       "EarlyStopping counter: 5 out of 10\n",
-      "Epoch    16: reducing learning rate of group 0 to 1.2500e-04.\n",
-      "Epoch: [16 / 500] | Time: 51.11s | Loss: 0.3921 | Train Acc: 81.52% | Val Acc: 53.12%\n",
+      "Epoch     9: reducing learning rate of group 0 to 5.0000e-04.\n",
+      "Epoch: [9 / 500] | Time: 49.23s | Loss: 0.4520 | Train Acc: 78.37% | Val Acc: 51.88%\n",
       "EarlyStopping counter: 6 out of 10\n",
-      "Epoch: [17 / 500] | Time: 51.14s | Loss: 0.3542 | Train Acc: 84.35% | Val Acc: 52.50%\n",
+      "Epoch: [10 / 500] | Time: 49.10s | Loss: 0.4274 | Train Acc: 79.94% | Val Acc: 54.37%\n",
       "EarlyStopping counter: 7 out of 10\n",
-      "Epoch: [18 / 500] | Time: 50.93s | Loss: 0.3719 | Train Acc: 82.58% | Val Acc: 52.50%\n",
+      "Epoch: [11 / 500] | Time: 48.84s | Loss: 0.4309 | Train Acc: 79.42% | Val Acc: 53.12%\n",
       "EarlyStopping counter: 8 out of 10\n",
-      "Epoch    19: reducing learning rate of group 0 to 6.2500e-05.\n",
-      "Epoch: [19 / 500] | Time: 50.71s | Loss: 0.3518 | Train Acc: 82.86% | Val Acc: 51.25%\n",
+      "Epoch    12: reducing learning rate of group 0 to 2.5000e-04.\n",
+      "Epoch: [12 / 500] | Time: 48.93s | Loss: 0.4248 | Train Acc: 79.65% | Val Acc: 53.75%\n",
       "EarlyStopping counter: 9 out of 10\n",
-      "Epoch: [20 / 500] | Time: 50.79s | Loss: 0.3492 | Train Acc: 83.62% | Val Acc: 50.00%\n",
+      "Epoch: [13 / 500] | Time: 48.90s | Loss: 0.3870 | Train Acc: 82.19% | Val Acc: 53.12%\n",
       "EarlyStopping counter: 10 out of 10\n",
-      "Test examples: 160 | Time: 14.51s | Test Acc: 56.25%\n",
-      "Total runtime: 1953.46s\n",
-      "val acc: 0.5625, test acc: 0.5625\n"
+      "Test examples: 160 | Time: 14.17s | Test Acc: 55.00%\n",
+      "Total runtime: 1248.42s\n",
+      "val acc: 0.55, test acc: 0.55\n"
      ]
     }
    ],
