Made predict_sentiment function to pass single sentences through the model

--- a/src/graph4nlp/sentiment_analysis.ipynb
+++ b/src/graph4nlp/sentiment_analysis.ipynb
@@ -13,18 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "aa373616",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using backend: pytorch\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
@@ -38,6 +30,7 @@
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import stanfordcorenlp\n",
     "\n",
     "import numpy as np\n",
     "import torch\n",
@@ -48,7 +41,8 @@
     "from torch.utils.data import DataLoader\n",
     "from torchtext.datasets import IMDB\n",
     "\n",
-    "from graph4nlp.pytorch.data.dataset import Text2LabelDataset\n",
+    "from graph4nlp.pytorch.data.data import to_batch\n",
+    "from graph4nlp.pytorch.data.dataset import Text2LabelDataItem, Text2LabelDataset\n",
     "from graph4nlp.pytorch.modules.evaluation.accuracy import Accuracy\n",
     "from graph4nlp.pytorch.modules.graph_construction import ConstituencyBasedGraphConstruction\n",
     "from graph4nlp.pytorch.modules.graph_construction import DependencyBasedGraphConstruction\n",
@@ -672,7 +666,7 @@
      "text": [
       "[ Using CUDA ]\n",
       "\n",
-      "../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\n"
+      "../../out/imdb/graphsage_bi_fuse_dependency_ckpt\n"
      ]
     },
     {
@@ -688,55 +682,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Building vocabs...\n",
-      "Pretrained word embeddings hit ratio: 0.8629453845095612\n",
-      "Using pretrained word embeddings\n",
-      "[ Initialized word embeddings: (29076, 300) ]\n",
-      "Saving vocab model to ../../data/imdb\\processed\\dependency_graph\\vocab.pt\n",
       "Loading pre-built vocab model stored in ../../data/imdb\\processed\\dependency_graph\\vocab.pt\n",
       "Train size: 4962, Val size: 992, Test size: 992\n",
       "[ Fix word embeddings ]\n",
-      "Epoch: [1 / 500] | Time: 37.25s | Loss: 0.6216 | Train Acc: 64.59% | Val Acc: 71.47%\n",
-      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [2 / 500] | Time: 31.55s | Loss: 0.5098 | Train Acc: 74.92% | Val Acc: 76.11%\n",
-      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [3 / 500] | Time: 29.29s | Loss: 0.4808 | Train Acc: 76.50% | Val Acc: 76.11%\n",
-      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [4 / 500] | Time: 28.15s | Loss: 0.4560 | Train Acc: 78.71% | Val Acc: 80.04%\n",
-      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [5 / 500] | Time: 27.43s | Loss: 0.4383 | Train Acc: 79.66% | Val Acc: 79.54%\n",
+      "Epoch: [1 / 500] | Time: 31.57s | Loss: 0.6216 | Train Acc: 64.59% | Val Acc: 71.47%\n",
+      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
+      "Epoch: [2 / 500] | Time: 29.54s | Loss: 0.5098 | Train Acc: 74.92% | Val Acc: 76.11%\n",
+      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
+      "Epoch: [3 / 500] | Time: 28.05s | Loss: 0.4808 | Train Acc: 76.50% | Val Acc: 76.11%\n",
+      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
+      "Epoch: [4 / 500] | Time: 27.13s | Loss: 0.4560 | Train Acc: 78.71% | Val Acc: 80.04%\n",
+      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
+      "Epoch: [5 / 500] | Time: 26.63s | Loss: 0.4383 | Train Acc: 79.66% | Val Acc: 79.54%\n",
       "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [6 / 500] | Time: 26.88s | Loss: 0.4250 | Train Acc: 79.98% | Val Acc: 80.85%\n",
-      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [7 / 500] | Time: 26.50s | Loss: 0.4053 | Train Acc: 81.11% | Val Acc: 80.44%\n",
+      "Epoch: [6 / 500] | Time: 26.24s | Loss: 0.4250 | Train Acc: 79.98% | Val Acc: 80.85%\n",
+      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
+      "Epoch: [7 / 500] | Time: 25.98s | Loss: 0.4053 | Train Acc: 81.11% | Val Acc: 80.44%\n",
       "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [8 / 500] | Time: 26.24s | Loss: 0.3860 | Train Acc: 82.25% | Val Acc: 82.06%\n",
-      "Saved model to ../../out/rotten_tomatoes/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [9 / 500] | Time: 26.04s | Loss: 0.3644 | Train Acc: 83.34% | Val Acc: 80.34%\n",
+      "Epoch: [8 / 500] | Time: 25.77s | Loss: 0.3860 | Train Acc: 82.25% | Val Acc: 82.06%\n",
+      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
+      "Epoch: [9 / 500] | Time: 25.58s | Loss: 0.3644 | Train Acc: 83.34% | Val Acc: 80.34%\n",
       "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [10 / 500] | Time: 25.88s | Loss: 0.3390 | Train Acc: 84.51% | Val Acc: 80.95%\n",
+      "Epoch: [10 / 500] | Time: 25.42s | Loss: 0.3390 | Train Acc: 84.51% | Val Acc: 80.95%\n",
       "EarlyStopping counter: 2 out of 10\n",
       "Epoch    11: reducing learning rate of group 0 to 5.0000e-04.\n",
-      "Epoch: [11 / 500] | Time: 25.75s | Loss: 0.3354 | Train Acc: 84.87% | Val Acc: 80.95%\n",
+      "Epoch: [11 / 500] | Time: 25.30s | Loss: 0.3354 | Train Acc: 84.87% | Val Acc: 80.95%\n",
       "EarlyStopping counter: 3 out of 10\n",
-      "Epoch: [12 / 500] | Time: 25.64s | Loss: 0.2921 | Train Acc: 86.76% | Val Acc: 80.75%\n",
+      "Epoch: [12 / 500] | Time: 25.21s | Loss: 0.2921 | Train Acc: 86.76% | Val Acc: 80.75%\n",
       "EarlyStopping counter: 4 out of 10\n",
-      "Epoch: [13 / 500] | Time: 25.63s | Loss: 0.2724 | Train Acc: 88.34% | Val Acc: 81.05%\n",
+      "Epoch: [13 / 500] | Time: 25.14s | Loss: 0.2724 | Train Acc: 88.34% | Val Acc: 81.05%\n",
       "EarlyStopping counter: 5 out of 10\n",
       "Epoch    14: reducing learning rate of group 0 to 2.5000e-04.\n",
-      "Epoch: [14 / 500] | Time: 25.58s | Loss: 0.2561 | Train Acc: 88.96% | Val Acc: 80.44%\n",
+      "Epoch: [14 / 500] | Time: 25.06s | Loss: 0.2561 | Train Acc: 88.96% | Val Acc: 80.44%\n",
       "EarlyStopping counter: 6 out of 10\n",
-      "Epoch: [15 / 500] | Time: 25.53s | Loss: 0.2268 | Train Acc: 90.72% | Val Acc: 80.85%\n",
+      "Epoch: [15 / 500] | Time: 25.00s | Loss: 0.2268 | Train Acc: 90.72% | Val Acc: 80.85%\n",
       "EarlyStopping counter: 7 out of 10\n",
-      "Epoch: [16 / 500] | Time: 25.47s | Loss: 0.2078 | Train Acc: 91.19% | Val Acc: 79.94%\n",
+      "Epoch: [16 / 500] | Time: 24.95s | Loss: 0.2078 | Train Acc: 91.19% | Val Acc: 79.94%\n",
       "EarlyStopping counter: 8 out of 10\n",
       "Epoch    17: reducing learning rate of group 0 to 1.2500e-04.\n",
-      "Epoch: [17 / 500] | Time: 25.41s | Loss: 0.2012 | Train Acc: 91.64% | Val Acc: 80.24%\n",
+      "Epoch: [17 / 500] | Time: 24.91s | Loss: 0.2012 | Train Acc: 91.64% | Val Acc: 80.24%\n",
       "EarlyStopping counter: 9 out of 10\n",
-      "Epoch: [18 / 500] | Time: 25.36s | Loss: 0.1902 | Train Acc: 91.96% | Val Acc: 80.24%\n",
+      "Epoch: [18 / 500] | Time: 24.88s | Loss: 0.1902 | Train Acc: 91.96% | Val Acc: 80.24%\n",
       "EarlyStopping counter: 10 out of 10\n",
-      "Test examples: 992 | Time: 9.26s | Test Acc: 82.86%\n",
-      "Total runtime: 871.40s\n",
+      "Test examples: 992 | Time: 9.12s | Test Acc: 82.86%\n",
+      "Total runtime: 856.18s\n",
       "val acc: 0.8205645161290323, test acc: 0.8286290322580645\n"
      ]
     }
@@ -794,8 +783,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c39c4847-4543-41ed-ac0c-896195868cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = runner.stopper.load_checkpoint(runner.model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c9263f87-9613-45d0-b31b-461c7fe57268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_topology_builder(config):\n",
+    "    if config[\"graph_type\"] == \"constituency\":\n",
+    "        topology_builder = ConstituencyBasedGraphConstruction\n",
+    "    \n",
+    "    elif config[\"graph_type\"] == \"dependency\":\n",
+    "        topology_builder = DependencyBasedGraphConstruction\n",
+    "        \n",
+    "    else:\n",
+    "        raise RuntimeError(\"Unkown graph_type: {}\".format(config[\"graph_type\"]))\n",
+    "                           \n",
+    "    return topology_builder\n",
+    "\n",
+    "def get_processor_args(topology_builder):\n",
+    "    if topology_builder == ConstituencyBasedGraphConstruction:\n",
+    "        processor_args = {\n",
+    "            \"annotators\": \"tokenize,ssplit,pos,parse\",\n",
+    "            \"tokenize.options\":\n",
+    "                \"splitHyphenated=false,normalizedParentheses=false,normalizeOtherBrackets=false\",\n",
+    "            \"tokenize.whitespace\": True,\n",
+    "            \"ssplit.isOneSentence\": False,\n",
+    "            \"outputFormat\": \"json\"\n",
+    "        }\n",
+    "    elif topology_builder == DependencyBasedGraphConstruction:\n",
+    "        processor_args = {\n",
+    "            \"annotators\": \"ssplit,tokenize,depparse\",\n",
+    "            \"tokenize.options\":\n",
+    "                \"splitHyphenated=false,normalizedParentheses=false,normalizeOtherBrackets=false\",\n",
+    "            \"tokenize.whitespace\": True,\n",
+    "            \"ssplit.isOneSentence\": True,\n",
+    "            \"outputFormat\": \"json\"\n",
+    "        }\n",
+    "    else:\n",
+    "            raise RuntimeError(\"Unknown topology_builder\")\n",
+    "        \n",
+    "    return processor_args"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07835d60-8263-4b55-9b92-a7e9cd5797fb",
+   "metadata": {},
+   "source": [
+    "## Using the Model\n",
+    "\n",
+    "For now, to get the model to predict a sentence, a StanfordCoreNLP instance should be running at the same time as this function. If one is not already running, follow the same steps as in \"Configure and Run the Model\".\n",
+    "\n",
+    "Once StanfordCoreNLP is set up, a graph is constructed from the sentence using the topology builder defined in the config file (the same one used by the model). Then, the graph is fed into the model's `forward()` method (note that calling the model is the same as calling `model.forward()`). The prediction (output tensor) is put in the range of 0 to 1, and the `.item()` method is called on the prediction to return it as a standard Python number rather than a single-element list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "3afd6ed6-84d3-4d75-9c23-648fbdde84aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_sentiment(model, config, sentence):\n",
+    "    model.eval()\n",
+    "    \n",
+    "    # Set up StanfordCoreNLP args\n",
+    "    processor=stanfordcorenlp.StanfordCoreNLP(\"http://localhost\", port=9000, timeout=50000)\n",
+    "    topology_builder = get_topology_builder(config)\n",
+    "    processor_args = get_processor_args(topology_builder)\n",
+    "    \n",
+    "    # Build a graph of the sentence\n",
+    "    graph = topology_builder.topology(sentence, processor, processor_args, merge_strategy=\"tailhead\", edge_strategy=None).to(config[\"device\"])\n",
+    "    \n",
+    "    # Add a \"token_id\" feature to each node to map the token to its representation in the model's vocab\n",
+    "    tokens = [graph.node_attributes[node][\"token\"] for node in range(graph.get_node_num())]\n",
+    "    id_list = [model.vocab.in_word_vocab.getIndex(tokens[i]) for i in range(graph.get_node_num())]\n",
+    "    graph.node_features[\"token_id\"] = torch.tensor(id_list, dtype=torch.long).to(config[\"device\"])\n",
+    "\n",
+    "    # Convert the sentence's graph to a batch, since the model's forward function expects a batch of graphs\n",
+    "    batch = to_batch([graph])\n",
+    "    \n",
+    "    # Pass the sentence through the model, put the values in the range [0, 1], and get rid of the batch dimension\n",
+    "    pred = torch.sigmoid(model(batch, require_loss=False)).squeeze(0)\n",
+    "    \n",
+    "    # return the tensor without device or grad_fn info [neg pos]\n",
+    "    return pred.cpu().detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34934e6b-0532-44a6-835d-62e5f1ddfb52",
+   "metadata": {},
+   "source": [
+    "Try the model on simple positive and negative sentences. Here, the meaning and sentiment are immediately clear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "758b0d71-fee0-4e5a-9f25-a9fb2dd7da95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00205751 0.9995881 ]\n",
+      "[9.9999237e-01 4.9111986e-06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_sentiment(model, config, \"This movie is great\"))\n",
+    "print(predict_sentiment(model, config, \"This movie is terrible\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97917278-870a-497b-b49e-098ac1af599c",
+   "metadata": {},
+   "source": [
+    "Now, test the model on a variety of more complicated sentences. The meaning of these sentences depends on modifiers of words, so the model will have to recognize, for example, that \"not\" modifies \"terrible\", negating the negative meaning of the phrase \"not terrible\". The model still performs quite well in these situations. In fact, this model has superior performance over the convolutional model shown [here](https://github.com/bentrevett/pytorch-sentiment-analysis) and comparable performance to the transformer model in the same repo. Note that the transformer model in the linked repo achieves about a 10% higher validation/test accuracy than this model. Integrating transformers into this model is a potential way forward to achieve even better results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "67c49b23-b3d8-43df-8063-9834bb2347c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.23027153 0.81551474]\n",
+      "[0.9959359  0.00317357]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_sentiment(model, config, \"This movie is not terrible, it's great\"))\n",
+    "print(predict_sentiment(model, config, \"This movie is not great, it's terrible\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48734f1a-4911-4906-90c4-5c167d7df855",
+   "metadata": {},
+   "source": [
+    "In these sentences, the meaning and sentiment of the sentences comes completely from some words modifying others. It is clear that \"far from terrible\" means something like \"quite good\" and is a positive phrase. However, the model seems to struggle in these scenarios, since there are no words in the sentence that directly reflect its sentiment. Rather, the words that carry strong sentiment are negated, but not directly. It could be difficult to tell that \"far from\" is rougly the same as \"not\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "a8f0320e-1ae2-4f74-a4fe-bdfee6e7bea1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.9915767e-01 6.5305823e-04]\n",
+      "[0.01969009 0.992814  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_sentiment(model, config, \"This movie is far from terrible\"))\n",
+    "print(predict_sentiment(model, config, \"This movie is far from great\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80e86f2b-037d-4fe4-a6e7-ac2078d59ac4",
+   "metadata": {},
+   "source": [
+    "The sentences below get their sentiment from directly negating strong words. This still seems to confuse the model, as it still views \"not terrible\" as extremely likely to be negative and \"not great\" as extremely likely to be positive. To be fair, \"not great\" is not necessarily equivalent to \"terrible\". In fact, it could still be a positive phrase, as in \"The movie was decent, but it was not great.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "2f641ef2-032e-424e-904c-e116cedb031c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9.999870e-01 8.149751e-06]\n",
+      "[0.05275448 0.9741976 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_sentiment(model, config, \"This movie is not terrible\"))\n",
+    "print(predict_sentiment(model, config, \"This movie is not great\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ee2dcca-47f9-4a82-9b36-133e9b47ba41",
    "metadata": {},
    "outputs": [],
    "source": []
