--- a/src/sentiment_analysis.ipynb
+++ b/src/sentiment_analysis.ipynb
@@ -8,15 +8,23 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../../vendor/graph4nlp\")"
+    "sys.path.append(\"../vendor/graph4nlp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "aa373616",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -151,7 +159,7 @@
     "        audience_pos = 0 # The number of positive audience reviews\n",
     "        audience_data = []\n",
     "\n",
-    "        driver = Chrome(executable_path=r\"../../bin/chromedriver_win32/chromedriver.exe\")    \n",
+    "        driver = Chrome(executable_path=r\"../bin/chromedriver_win32/chromedriver.exe\")    \n",
     "        driver.get(critic_url)\n",
     "\n",
     "        # All of the review information, including its positive or negative tag, is included in the review_container\n",
@@ -262,7 +270,7 @@
     "\n",
     "    # pos_neg is either \"pos\" or \"neg\", to find the right directory and write the appropriate label\n",
     "    def _gather_lines(self, test_train, pos_neg):\n",
-    "        root_dir = \"../../data/imdb/IMDB/aclImdb/\" + test_train + \"/\" + pos_neg.lower()\n",
+    "        root_dir = \"../data/imdb/IMDB/aclImdb/\" + test_train + \"/\" + pos_neg.lower()\n",
     "        lines = []\n",
     "        for entry in os.scandir(root_dir):\n",
     "            with open(entry.path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -283,14 +291,14 @@
     "\n",
     "    # Remove old/unnecessary files and folders from the dataset\n",
     "    def _clean_dataset(self):\n",
-    "        shutil.move(\"../../data/imdb/IMDB/aclImdb/README\", \"../../data/imdb/README.md\")\n",
-    "        shutil.rmtree(\"../../data/imdb/IMDB\")\n",
+    "        shutil.move(\"../data/imdb/IMDB/aclImdb/README\", \"../data/imdb/README.md\")\n",
+    "        shutil.rmtree(\"../data/imdb/IMDB\")\n",
     "\n",
     "    # The IMDB dataset from torchtext organizes its files differently from what we want (different test/train and pos/neg directories with entries being individual files)\n",
     "    # Walk through the directories, combine into just a test and train file formatted properly for Text2LabelDataset\n",
     "    # test_train_val is either \"test\", \"train\", or \"val\" to loop through the train directory or the test directory (used for both \"test\" and \"val\")\n",
     "    def _condense_dataset(self, test_train):\n",
-    "        new_file = \"../../data/imdb/raw/\" + test_train + \".txt\"\n",
+    "        new_file = \"../data/imdb/raw/\" + test_train + \".txt\"\n",
     "        lines = []\n",
     "        lines.extend(self._gather_lines(test_train, \"pos\"))\n",
     "        lines.extend(self._gather_lines(test_train, \"neg\"))\n",
@@ -306,13 +314,13 @@
     "            test_lines.extend(lines[13001:13501])\n",
     "            lines = test_lines\n",
     "            random.shuffle(val_lines)\n",
-    "            self._write_lines_to_file(\"../../data/imdb/raw/val.txt\", val_lines)\n",
+    "            self._write_lines_to_file(\"../data/imdb/raw/val.txt\", val_lines)\n",
     "        \n",
     "        random.shuffle(lines)\n",
     "        self._write_lines_to_file(new_file, lines)\n",
     "            \n",
     "    def download(self):\n",
-    "        train_data, test_data = IMDB(root=\"../../data/imdb\")\n",
+    "        train_data, test_data = IMDB(root=\"../data/imdb\")\n",
     "        self._condense_dataset(\"train\")\n",
     "        self._condense_dataset(\"test\")\n",
     "        self._clean_dataset()"
@@ -482,7 +490,7 @@
     "        topology_subdir = \"{}_graph\".format(self.config[\"graph_type\"])\n",
     "        \n",
     "        if self.config[\"dataset\"] == \"rotten_tomatoes\":\n",
-    "            dataset = RTDataset(root_dir=\"../../data/rotten_tomatoes\",\n",
+    "            dataset = RTDataset(root_dir=\"../data/rotten_tomatoes\",\n",
     "                                pretrained_word_emb_name=self.config.get(\"pretrained_word_emb_name\", \"840B\"),\n",
     "                                merge_strategy=merge_strategy,\n",
     "                                seed=self.config[\"seed\"],\n",
@@ -499,7 +507,7 @@
     "        elif self.config[\"dataset\"] == \"imdb\":\n",
     "            import nltk\n",
     "            nltk.download(\"punkt\")\n",
-    "            dataset = IMDBDataset(root_dir=\"../../data/imdb\",\n",
+    "            dataset = IMDBDataset(root_dir=\"../data/imdb\",\n",
     "                                pretrained_word_emb_name=self.config.get(\"pretrained_word_emb_name\", \"840B\"),\n",
     "                                merge_strategy=merge_strategy,\n",
     "                                seed=self.config[\"seed\"],\n",
@@ -656,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0f1c290b-e7a8-44f9-a212-bbc87f870a61",
    "metadata": {},
    "outputs": [
@@ -664,75 +672,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ Using CUDA ]\n",
+      "[ Using CPU ]\n",
       "\n",
-      "../../out/imdb/graphsage_bi_fuse_dependency_ckpt\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\lucas\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading pre-built vocab model stored in ../../data/imdb\\processed\\dependency_graph\\vocab.pt\n",
-      "Train size: 4962, Val size: 992, Test size: 992\n",
-      "[ Fix word embeddings ]\n",
-      "Epoch: [1 / 500] | Time: 31.57s | Loss: 0.6216 | Train Acc: 64.59% | Val Acc: 71.47%\n",
-      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [2 / 500] | Time: 29.54s | Loss: 0.5098 | Train Acc: 74.92% | Val Acc: 76.11%\n",
-      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [3 / 500] | Time: 28.05s | Loss: 0.4808 | Train Acc: 76.50% | Val Acc: 76.11%\n",
-      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [4 / 500] | Time: 27.13s | Loss: 0.4560 | Train Acc: 78.71% | Val Acc: 80.04%\n",
-      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [5 / 500] | Time: 26.63s | Loss: 0.4383 | Train Acc: 79.66% | Val Acc: 79.54%\n",
-      "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [6 / 500] | Time: 26.24s | Loss: 0.4250 | Train Acc: 79.98% | Val Acc: 80.85%\n",
-      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [7 / 500] | Time: 25.98s | Loss: 0.4053 | Train Acc: 81.11% | Val Acc: 80.44%\n",
-      "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [8 / 500] | Time: 25.77s | Loss: 0.3860 | Train Acc: 82.25% | Val Acc: 82.06%\n",
-      "Saved model to ../../out/imdb/graphsage_bi_fuse_dependency_ckpt\\params.saved\n",
-      "Epoch: [9 / 500] | Time: 25.58s | Loss: 0.3644 | Train Acc: 83.34% | Val Acc: 80.34%\n",
-      "EarlyStopping counter: 1 out of 10\n",
-      "Epoch: [10 / 500] | Time: 25.42s | Loss: 0.3390 | Train Acc: 84.51% | Val Acc: 80.95%\n",
-      "EarlyStopping counter: 2 out of 10\n",
-      "Epoch    11: reducing learning rate of group 0 to 5.0000e-04.\n",
-      "Epoch: [11 / 500] | Time: 25.30s | Loss: 0.3354 | Train Acc: 84.87% | Val Acc: 80.95%\n",
-      "EarlyStopping counter: 3 out of 10\n",
-      "Epoch: [12 / 500] | Time: 25.21s | Loss: 0.2921 | Train Acc: 86.76% | Val Acc: 80.75%\n",
-      "EarlyStopping counter: 4 out of 10\n",
-      "Epoch: [13 / 500] | Time: 25.14s | Loss: 0.2724 | Train Acc: 88.34% | Val Acc: 81.05%\n",
-      "EarlyStopping counter: 5 out of 10\n",
-      "Epoch    14: reducing learning rate of group 0 to 2.5000e-04.\n",
-      "Epoch: [14 / 500] | Time: 25.06s | Loss: 0.2561 | Train Acc: 88.96% | Val Acc: 80.44%\n",
-      "EarlyStopping counter: 6 out of 10\n",
-      "Epoch: [15 / 500] | Time: 25.00s | Loss: 0.2268 | Train Acc: 90.72% | Val Acc: 80.85%\n",
-      "EarlyStopping counter: 7 out of 10\n",
-      "Epoch: [16 / 500] | Time: 24.95s | Loss: 0.2078 | Train Acc: 91.19% | Val Acc: 79.94%\n",
-      "EarlyStopping counter: 8 out of 10\n",
-      "Epoch    17: reducing learning rate of group 0 to 1.2500e-04.\n",
-      "Epoch: [17 / 500] | Time: 24.91s | Loss: 0.2012 | Train Acc: 91.64% | Val Acc: 80.24%\n",
-      "EarlyStopping counter: 9 out of 10\n",
-      "Epoch: [18 / 500] | Time: 24.88s | Loss: 0.1902 | Train Acc: 91.96% | Val Acc: 80.24%\n",
-      "EarlyStopping counter: 10 out of 10\n",
-      "Test examples: 992 | Time: 9.12s | Test Acc: 82.86%\n",
-      "Total runtime: 856.18s\n",
-      "val acc: 0.8205645161290323, test acc: 0.8286290322580645\n"
+      "../out/imdb/graphsage_bi_fuse_dependency_ckpt\n"
      ]
     }
    ],
    "source": [
     "# Configure\n",
-    "config_file = \"../../config/graph4nlp/graphsage_bi_fuse_static_dependency.yaml\"\n",
+    "config_file = \"../config/graphsage_bi_fuse_static_dependency.yaml\"\n",
     "config = yaml.load(open(config_file, \"r\"), Loader=yaml.FullLoader)\n",
     "\n",
     "# Set all RNG seeds to the same seed to ensure a deterministic model\n",
@@ -783,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c39c4847-4543-41ed-ac0c-896195868cba",
    "metadata": {},
    "outputs": [],
@@ -793,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c9263f87-9613-45d0-b31b-461c7fe57268",
    "metadata": {},
    "outputs": [],
@@ -849,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "3afd6ed6-84d3-4d75-9c23-648fbdde84aa",
    "metadata": {},
    "outputs": [],
@@ -890,19 +838,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "758b0d71-fee0-4e5a-9f25-a9fb2dd7da95",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.00205751 0.9995881 ]\n",
-      "[9.9999237e-01 4.9111986e-06]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(predict_sentiment(model, config, \"This movie is great\"))\n",
     "print(predict_sentiment(model, config, \"This movie is terrible\"))"
@@ -918,19 +857,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "67c49b23-b3d8-43df-8063-9834bb2347c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.23027153 0.81551474]\n",
-      "[0.9959359  0.00317357]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(predict_sentiment(model, config, \"This movie is not terrible, it's great\"))\n",
     "print(predict_sentiment(model, config, \"This movie is not great, it's terrible\"))"
@@ -946,19 +876,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "a8f0320e-1ae2-4f74-a4fe-bdfee6e7bea1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[9.9915767e-01 6.5305823e-04]\n",
-      "[0.01969009 0.992814  ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(predict_sentiment(model, config, \"This movie is far from terrible\"))\n",
     "print(predict_sentiment(model, config, \"This movie is far from great\"))"
@@ -974,19 +895,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "2f641ef2-032e-424e-904c-e116cedb031c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[9.999870e-01 8.149751e-06]\n",
-      "[0.05275448 0.9741976 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(predict_sentiment(model, config, \"This movie is not terrible\"))\n",
     "print(predict_sentiment(model, config, \"This movie is not great\"))"
@@ -1003,7 +915,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1017,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
